<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:padding="8dp"
    android:background="#ff3"
    android:orientation="vertical"
    android:weightSum="8"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_weight="1"
        android:textSize="24sp"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <TextView
        android:layout_weight="1"
        android:layout_gravity="right"
        android:textSize="24sp"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auther" />

    <TextView
        android:id="@+id/outputArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#fff"
        android:gravity="right"
        android:padding="8dp"
        android:text="@string/zero"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_weight="1"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:textSize="24sp"
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/clear" />

        <Button
            android:textSize="24sp"
            android:id="@+id/backspace"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/backspace" />

        <Button
            android:textSize="24sp"
            android:id="@+id/divided"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/divided" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:textSize="24sp"
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/seven" />

        <Button
            android:textSize="24sp"
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/eight" />

        <Button
            android:textSize="24sp"
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nine" />

        <Button
            android:textSize="24sp"
            android:id="@+id/multiplied"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiplied" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:textSize="24sp"
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/four" />

        <Button
            android:textSize="24sp"
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/five" />

        <Button
            android:textSize="24sp"
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/six" />

        <Button
            android:textSize="24sp"
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/minus" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:textSize="24sp"
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/one" />

        <Button
            android:textSize="24sp"
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/two" />

        <Button
            android:textSize="24sp"
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/three" />

        <Button
            android:textSize="24sp"
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:textSize="24sp"
            android:id="@+id/plusminus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plusminus" />

        <Button
            android:textSize="24sp"
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/zero" />

        <Button
            android:textSize="24sp"
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dot" />

        <Button
            android:textSize="24sp"
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equal" />
    </LinearLayout>
</LinearLayout>